Closed Bug 1882972 Opened 7 months ago Closed 7 months ago

FreeBSD wayland issue with wayland-proxy

Categories

(Core :: Widget: Gtk, defect, P2)

Firefox 123
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: bapt, Assigned: stransky)

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:123.0) Gecko/20100101 Firefox/123.0

Steps to reproduce:

start firefox under wayland

Actual results:

infinite loop polling on a non connected socket, the wayland-proxy code have portability issue that are being addressed here: https://github.com/stransky/wayland-proxy/issues/3

Expected results:

firefox should have start

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core

Note: as a workaround you may run with MOZ_DISABLE_WAYLAND_PROXY=1 env variable.

Flags: needinfo?(stransky)
Priority: -- → P2
Assignee: nobody → stransky
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/47688cdd3590 [Linux] Enable pthread_setname_np() on FreeBSD r=emilio https://hg.mozilla.org/integration/autoland/rev/7fb4d23cf4c0 [Linux] Don't use POLLOUT on disconnected socket r=emilio
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
Flags: needinfo?(stransky)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: