Bug 1882972 [Linux] Don't use POLLOUT on disconnected socket r=emilio

Backport from https://github.com/stransky/wayland-proxy/pull/6/commits/852f23c8f4ec98115d8e925f72465e27e8c00bd7

Depends on D203430

Differential Revision: https://phabricator.services.mozilla.com/D203431